src/test/deca/context/valid/118_classeExtendsFields.deca
// Description:
//    Programme minimaliste: une classe et un Main vérifiant que x est défini pour B.
//
// Résultats:
// 1
//
// Historique:
//    cree le 01/01/2022

class A {
	int x = 1;
}

class B extends A {
}

{
	A a = new A();
	B b = new B();
	println(b.x);
}
