src/test/deca/context/invalid/56_TooFewArgs.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 	Ligne 18: ContextualError: too few args
// 
// Historique:
//    cree le 01/01/2022

class A {
	int f(int x) {
		return x;
	}
}
{
	A a = new A();
	// Doit etre refuse.
	println(a.f());
}
